[package]
name = "async_anticheat_api"
version = "0.1.0"
edition = "2021"
description = "Ingestion API for async_anticheat packet batches"
authors = ["Thomas"]

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1"
sha2 = "0.10"
hex = "0.4"

# S3-compatible object storage (rust-s3 is lighter than AWS SDK)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# Fast builds for development/testing deployments
# Use: cargo build --profile dev-release
[profile.dev-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
incremental = true
debug = false

# Fully optimized builds for production
# Use: cargo build --release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"


